src/AdvancedSearchBox.css
@font-face{
    font-family: 'MonserratLight';
    src: url('./fonts/Montserrat-Light.ttf') format('truetype');
}
@font-face{
    font-family: 'MontserratSemiBold';
    src: url('./fonts/Montserrat-SemiBold.ttf') format('truetype');
}
.AdvancedSearchBox{
    text-align: center;
    font-family: 'MonserratLight';
    color: white;
    padding:20px;
    height: 100%;
}
.show{display: block;}

.AdvancedSearchBox .search-box-body{
    height: 100%;
    width: auto;
    padding:0px;
    padding-top: 15px;
}

.AdvancedSearchBox .search-box-inner-body {
    text-align: center;
    align-items: center;
    width: 100%;
    height: 100%;
}

#selection-scrollable{
    scroll-behavior: smooth;
    overflow-y:auto;
    border-style: solid;
    border-top: 10px;
    border-bottom: 10px;
    border-image: linear-gradient(to right, rgba(255,255,255,0)  10%, rgba(255,255,255,0.5)  50% ,  rgba(255,255,255,0) 90%) 100% 0 100% 0/2px 0 2px 0;
    padding-top: 5px;
    padding-bottom: 5px;
}

p{
    margin: 10px;
    font-size: 2vh;
}

#current-selections{
    margin-top: 4px;
    margin-bottom: 4px;
}

h6{
    font-family: 'MontserratSemiBold';
    font-size: 2vh;
    margin: 0px 0px 8px 0px;
}
.static-button{
    margin-top: 10px;
}

#adv-view-button{
    margin-top: 10px;
}

#selection-scrollable::-webkit-scrollbar-track:vertical {
    color: transparent;
}

#selection-scrollable::-webkit-scrollbar-track:horizontal {
    color: transparent;
}

#selection-scrollable::-webkit-scrollbar {
    -webkit-appearance: none;
    background-color: transparent;
    width: 16px;
}

#selection-scrollable::-webkit-scrollbar-thumb {
    background-clip: padding-box;
    background-color: #C1C1C1;
    border-color: transparent;
    border-radius: 9px 8px 8px 9px;
    border-style: solid;
    border-width: 3px 3px 3px 4px; /* Workaround because margins aren't supported */
}
.AdvancedSearchBox.dropdown-item{
    padding: 0.5vh;
    margin:0px;
    font-size: 12px;
}
.AdvancedSearchBox .range-button-display.dropdown-button-display{
    font-size: 14px;
    max-width: 70%;
    min-width: 70%;
    text-align: center;
}
.AdvancedSearchBox .dropdown-button-display{
    font-size: 14px;
    max-width: 85%;
    min-width: 85%;
    text-align: center;
    background-color: transparent;
    font-family: 'MonserratLight';
    border: none;
    text-align: left;
}
.AdvancedSearchBox .search-box-body .range-button.dropdown-button {
    max-width: 30%;
    min-width: 30%;
}
.AdvancedSearchBox .search-box-body .dropdown-button{
    position: relative;
    max-width: 60%;
    min-width: 60%;
    background-color: rgba(219, 219, 219,0.2);
    border:0px;
    border-bottom:2px solid rgba(165, 80, 212, 1);
    border-radius: 10px;
    color: white;
    margin-bottom: 20px;
    text-align: center;
}

.AdvancedSearchBox .search-box-body .dropdown-button:hover{
    background-color: rgba(230, 230, 230,0.3);
}

.param-title{
    margin: 0px;
    margin-top: 6px;
    margin-bottom: 2px;
}

.param-content{
    margin: 0px;
    margin-bottom: 2px;
}

.AdvancedSearchBox .arrow {
    display: inline-block;
    text-align: center;
    margin: 0px;
}

.advanced-grid{
    display: grid;
    grid-template-columns: 50% 50% ;
}

#run-advanced-search-button{
    background-color: rgba(219, 219, 219,0.2);
    border:0px;
    border-bottom:2px solid rgba(165, 80, 212, 1);
    border-radius: 10px;
    color: white;
    font-size: 20px;
    width: auto;
    padding:10px;
    margin-bottom: 20px;
}
#run-advanced-search-button:hover{
    background-color: rgba(230, 230, 230,0.3);
}

#view-selection-adv-button{
    max-width: 200px;
    min-width: 200px;
    text-align: center;
}

.AdvancedSearchBox .view-selection-adv-dd{
    text-align: center;
}

